# containerd

./: .gitignore  .ruff.toml  CONTRIBUTING.md  Dockerfile  MIGRATION.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: parity-gap.md
.github/workflows/: ci-python.yml  ci.yml
containerd_py/: daemon.py
containerd_py/api/: __init__.py
containerd_py/api/protos/github/com/containerd/containerd/api/services/containers/v1/: containers_pb2.py
containerd_py/api/protos/github/com/containerd/containerd/api/services/images/v1/: images_pb2.py
containerd_py/api/protos/github/com/containerd/containerd/api/services/tasks/v1/: tasks_pb2_grpc.py
containerd_py/api/protos/github/com/containerd/containerd/api/types/: descriptor_pb2_grpc.py  metrics_pb2.py  mount_pb2_grpc.py
containerd_py/api/protos/github/com/containerd/containerd/api/types/task/: task_pb2.py
containerd_py/cli/: main.py
containerd_py/server/: grpc_server.py  services.py
containerd_py/state/: store.py
docs/: architecture-python.md  architecture.md  limitations.md  quickstart.md
pkg/identifiers/: doc.go
pkg/namespaces/: doc.go
pkg/os/: doc.go
pkg/reference/: doc.go
pkg/rootfs/: doc.go
pkg/seccomp/: doc.go
pkg/snapshotters/: doc.go
pkg/stdio/: doc.go
pkg/sys/: doc.go
pkg/timeout/: doc.go
pkg/tracing/: doc.go
pkg/ttrpcutil/: doc.go
py_containerd/: __init__.py  daemon.py
py_containerd/api/protos/github/com/containerd/containerd/api/services/containers/v1/: containers_pb2_grpc.py
py_containerd/api/protos/github/com/containerd/containerd/api/services/content/v1/: content_pb2.py  content_pb2_grpc.py
py_containerd/api/protos/github/com/containerd/containerd/api/services/images/v1/: images_pb2_grpc.py
py_containerd/api/protos/github/com/containerd/containerd/api/services/tasks/v1/: tasks_pb2.py
py_containerd/api/protos/github/com/containerd/containerd/api/types/: descriptor_pb2.py  metrics_pb2_grpc.py  mount_pb2.py
py_containerd/api/protos/github/com/containerd/containerd/api/types/task/: task_pb2_grpc.py
py_containerd/cli/: __init__.py  main.py
py_containerd/server/: grpc_server.py
scripts/: demo_busybox.sh
tests/: test_cli.py  test_daemon_unimplemented.py  test_e2e_busybox.py  test_integration_sim.py  test_protos_import.py  test_smoke.py  test_state_store.py
tools/: fetch_containerd.sh  gen_protos.sh
